--- a/public/css/app.css
+++ b/public/css/app.css
@@ -857,9 +857,6 @@ select {
 .inline-flex {
   display: inline-flex;
 }
-.table {
-  display: table;
-}
 .grid {
   display: grid;
 }
@@ -878,14 +875,14 @@ select {
 .h-6 {
   height: 1.5rem;
 }
+.h-56 {
+  height: 14rem;
+}
 .h-4 {
   height: 1rem;
 }
 .h-10 {
   height: 2.5rem;
-}
-.h-7 {
-  height: 1.75rem;
 }
 .h-auto {
   height: auto;
@@ -895,6 +892,9 @@ select {
 }
 .h-20 {
   height: 5rem;
+}
+.h-7 {
+  height: 1.75rem;
 }
 .max-h-full {
   max-height: 100%;
@@ -923,9 +923,6 @@ select {
 .w-10 {
   width: 2.5rem;
 }
-.w-7 {
-  width: 1.75rem;
-}
 .w-64 {
   width: 16rem;
 }
@@ -937,6 +934,9 @@ select {
 }
 .w-48 {
   width: 12rem;
+}
+.w-7 {
+  width: 1.75rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -958,9 +958,6 @@ select {
 }
 .shrink-0 {
   flex-shrink: 0;
-}
-.border-collapse {
-  border-collapse: collapse;
 }
 .origin-top-left {
   transform-origin: top left;
@@ -1021,6 +1018,9 @@ select {
       -ms-user-select: none;
           user-select: none;
 }
+.resize-y {
+  resize: vertical;
+}
 .list-inside {
   list-style-position: inside;
 }
@@ -1035,6 +1035,9 @@ select {
 }
 .flex-col {
   flex-direction: column;
+}
+.content-center {
+  align-content: center;
 }
 .items-start {
   align-items: flex-start;
@@ -1054,17 +1057,17 @@ select {
 .justify-items-center {
   justify-items: center;
 }
-.gap-2 {
-  gap: 0.5rem;
-}
-.gap-3 {
-  gap: 0.75rem;
-}
 .gap-4 {
   gap: 1rem;
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-2 {
+  gap: 0.5rem;
+}
+.gap-3 {
+  gap: 0.75rem;
 }
 .gap-1 {
   gap: 0.25rem;
@@ -1097,6 +1100,9 @@ select {
 }
 .rounded-md {
   border-radius: 0.375rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -1141,18 +1147,6 @@ select {
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
-}
-.border-gray-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 .border-indigo-400 {
   --tw-border-opacity: 1;
@@ -1253,13 +1247,13 @@ select {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
-}
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 .px-2\.5 {
   padding-left: 0.625rem;
@@ -1269,10 +1263,6 @@ select {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
 }
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1280,6 +1270,10 @@ select {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1290,6 +1284,12 @@ select {
 }
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+.pt-3 {
+  padding-top: 0.75rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1315,14 +1315,8 @@ select {
 .pl-3 {
   padding-left: 0.75rem;
 }
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
 .pt-4 {
   padding-top: 1rem;
-}
-.text-left {
-  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -1414,6 +1408,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
@@ -1422,9 +1420,9 @@ select {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
 }
-.text-red-600 {
+.text-lime-600 {
   --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
+  color: rgb(101 163 13 / var(--tw-text-opacity));
 }
 .text-indigo-700 {
   --tw-text-opacity: 1;
@@ -1815,10 +1813,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(34 39 56 / var(--tw-bg-opacity));
 }
-.dark .dark\:bg-neutral-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
-}
 .dark .dark\:bg-dark-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(21 24 35 / var(--tw-bg-opacity));
@@ -1826,6 +1820,10 @@ select {
 .dark .dark\:bg-dark-eval-2 {
   --tw-bg-opacity: 1;
   background-color: rgb(42 47 66 / var(--tw-bg-opacity));
+}
+.dark .dark\:bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .dark .dark\:text-gray-500 {
   --tw-text-opacity: 1;
